# edu-data-platform-mesh

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: gallery_raw_ingestion_dag.py
clickhouse/init/: 001_gallery_schema.sql
cube/: .dockerignore  Dockerfile
cube/model/: ArtworkEngagement.js  RoomUtilization.js
data/sample/: artist_profiles.csv
docker/airflow/: Dockerfile
docs/: architecture.md  data-domains.md  data-provenance.md  defense-demo.md  deployment.md  final-work-report.md  local-run-report.md  observability.md  project-explanation.md  requirements-mapping.md  simple-explanation-for-me.md
docs/adr/: 0001-domain-oriented-gallery-platform.md
docs/data-products/: artwork_engagement.md  artwork_engagement_product.yaml
feast/feature_repo/: feature_store.yaml  features.py
flink/: Dockerfile  README.md
flink/sql/: gallery_window_aggregation.sql
grafana/dashboards/: gallery_realtime.json
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: gallery_raw_checkpoint.yml
metadata/: lineage.yml
scripts/: deploy_staging.sh  materialize_features.py  run_event_generator.sh  run_quality_checks.py  run_spark_iceberg_job.sh  submit_flink_sql.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_lakehouse_transforms.py  test_lineage.py  test_quality_rules.py
webapp/: index.html  package-lock.json  package.json  server.js
(+27 files in other folders)
